src/test/ui/issues/issue-17545.stderr
error[E0597]: borrowed value does not live long enough
  --> $DIR/issue-17545.rs:7:10
   |
LL |         &id(()),
   |          ^^^^^^ temporary value does not live long enough
LL |     ));
   |       - temporary value only lives until here
   |
note: borrowed value must be valid for the lifetime 'a as defined on the function body at 5:12...
  --> $DIR/issue-17545.rs:5:12
   |
LL | pub fn foo<'a, F: Fn(&'a ())>(bar: F) {
   |            ^^
   = note: consider using a `let` binding to increase its lifetime

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
